cmake_minimum_required (VERSION 3.14)

set(CoreName Genesis-Plus-GX)

project (${CoreName})

add_library(${CoreName} SHARED
    Upstream/core/cd_hw/libchdr/src/bitstream.c
    Upstream/core/cd_hw/libchdr/src/cdrom.c
    Upstream/core/cd_hw/libchdr/src/chd.c
    Upstream/core/cd_hw/libchdr/src/flac.c
    Upstream/core/cd_hw/libchdr/src/huffman.c
    Upstream/core/cd_hw/libchdr/deps/libFLAC/bitmath.c
    Upstream/core/cd_hw/libchdr/deps/libFLAC/bitreader.c
    Upstream/core/cd_hw/libchdr/deps/libFLAC/cpu.c
    Upstream/core/cd_hw/libchdr/deps/libFLAC/crc.c
    Upstream/core/cd_hw/libchdr/deps/libFLAC/fixed.c
    Upstream/core/cd_hw/libchdr/deps/libFLAC/float.c
    Upstream/core/cd_hw/libchdr/deps/libFLAC/format.c
    Upstream/core/cd_hw/libchdr/deps/libFLAC/lpc.c
    Upstream/core/cd_hw/libchdr/deps/libFLAC/lpc_intrin_avx2.c
    Upstream/core/cd_hw/libchdr/deps/libFLAC/lpc_intrin_sse.c
    Upstream/core/cd_hw/libchdr/deps/libFLAC/lpc_intrin_sse2.c
    Upstream/core/cd_hw/libchdr/deps/libFLAC/lpc_intrin_sse41.c
    Upstream/core/cd_hw/libchdr/deps/libFLAC/md5.c
    Upstream/core/cd_hw/libchdr/deps/libFLAC/memory.c
    Upstream/core/cd_hw/libchdr/deps/libFLAC/stream_decoder.c
    Upstream/core/cd_hw/libchdr/deps/lzma/LzFind.c
    Upstream/core/cd_hw/libchdr/deps/lzma/LzmaDec.c
    Upstream/core/cd_hw/libchdr/deps/lzma/LzmaEnc.c
    Upstream/core/vdp_ctrl.c
    Upstream/core/membnk.c
    Upstream/core/memz80.c
    Upstream/core/mem68k.c
    Upstream/core/state.c
    Upstream/core/vdp_render.c
    Upstream/core/io_ctrl.c
    Upstream/core/loadrom.c
    Upstream/core/system.c
    Upstream/core/genesis.c
    Upstream/core/z80/z80.c
    Upstream/core/m68k/m68kcpu.c
    Upstream/core/m68k/s68kcpu.c
    Upstream/core/ntsc/md_ntsc.c
    Upstream/core/ntsc/sms_ntsc.c
    Upstream/core/sound/ym3438.c
    Upstream/core/sound/sound.c
    Upstream/core/sound/ym2413.c
    Upstream/core/sound/eq.c
    Upstream/core/sound/ym2612.c
    Upstream/core/sound/blip_buf.c
    Upstream/core/sound/psg.c
    Upstream/core/input_hw/activator.c
    Upstream/core/input_hw/paddle.c
    Upstream/core/input_hw/teamplayer.c
    Upstream/core/input_hw/input.c
    Upstream/core/input_hw/gamepad.c
    Upstream/core/input_hw/sportspad.c
    Upstream/core/input_hw/lightgun.c
    Upstream/core/input_hw/mouse.c
    Upstream/core/input_hw/xe_1ap.c
    Upstream/core/input_hw/terebi_oekaki.c
    Upstream/core/input_hw/graphic_board.c
    Upstream/core/cd_hw/gfx.c
    Upstream/core/cd_hw/scd.c
    Upstream/core/cd_hw/cdc.c
    Upstream/core/cd_hw/cdd.c
    Upstream/core/cd_hw/pcm.c
    Upstream/core/cd_hw/cd_cart.c
    Upstream/core/cart_hw/eeprom_spi.c
    Upstream/core/cart_hw/md_cart.c
    Upstream/core/cart_hw/sms_cart.c
    Upstream/core/cart_hw/eeprom_i2c.c
    Upstream/core/cart_hw/ggenie.c
    Upstream/core/cart_hw/areplay.c
    Upstream/core/cart_hw/sram.c
    Upstream/core/cart_hw/eeprom_93c.c
    Upstream/core/cart_hw/svp/svp.c
    Upstream/core/cart_hw/svp/ssp16.c
    Upstream/libretro/libretro-common/streams/file_stream.c
    Upstream/libretro/libretro-common/streams/file_stream_transforms.c
    Upstream/libretro/libretro-common/compat/fopen_utf8.c
    Upstream/libretro/libretro-common/compat/compat_snprintf.c
    Upstream/libretro/libretro-common/compat/compat_strl.c
    Upstream/libretro/libretro-common/compat/compat_strcasestr.c
    Upstream/libretro/libretro-common/compat/compat_posix_string.c
    Upstream/libretro/libretro-common/encodings/encoding_utf.c
    Upstream/libretro/libretro-common/vfs/vfs_implementation.c
    Upstream/libretro/libretro-common/file/file_path.c
    Upstream/libretro/libretro-common/file/retro_dirent.c
    Upstream/libretro/libretro-common/lists/string_list.c
    Upstream/libretro/libretro-common/lists/dir_list.c
    Upstream/libretro/libretro-common/memmap/memalign.c
    Upstream/libretro/libretro-common/string/stdstring.c
    Upstream/libretro/libretro-common/cdrom/cdrom.c
    Upstream/libretro/libretro-common/vfs/vfs_implementation_cdrom.c
    Upstream/core/cd_hw/libchdr/deps/zlib/adler32.c
    Upstream/core/cd_hw/libchdr/deps/zlib/inffast.c
    Upstream/core/cd_hw/libchdr/deps/zlib/inflate.c
    Upstream/core/cd_hw/libchdr/deps/zlib/inftrees.c
    Upstream/core/cd_hw/libchdr/deps/zlib/zutil.c
    Upstream/core/tremor/floor0.c
    Upstream/core/tremor/bitwise.c
    Upstream/core/tremor/synthesis.c
    Upstream/core/tremor/window.c
    Upstream/core/tremor/sharedbook.c
    Upstream/core/tremor/block.c
    Upstream/core/tremor/framing.c
    Upstream/core/tremor/res012.c
    Upstream/core/tremor/info.c
    Upstream/core/tremor/codebook.c
    Upstream/core/tremor/registry.c
    Upstream/core/tremor/vorbisfile.c
    Upstream/core/tremor/mapping0.c
    Upstream/core/tremor/mdct.c
    Upstream/core/tremor/floor1.c
    Upstream/libretro/libretro.c
    Upstream/libretro/scrc32.c
)

target_compile_definitions(${CoreName} PRIVATE
    GIT_VERSION=" 5299257"
    USE_LIBTREMOR
    USE_LIBCHDR
    PACKAGE_VERSION="1.3.2"
    FLAC_API_EXPORTS
    FLAC__HAS_OGG=0
    HAVE_LROUND
    HAVE_STDINT_H
    _7ZIP_ST
    flac_max=MAX
    flac_min=MIN
    fseeko=fseek
    ftello=ftell
    HAVE_CDROM
    USE_16BPP_RENDERING
    FRONTEND_SUPPORTS_RGB565
    LSB_FIRST
    BYTE_ORDER=LITTLE_ENDIAN
    ALIGN_LONG
    __LIBRETRO__
    M68K_OVERCLOCK_SHIFT=20
    Z80_OVERCLOCK_SHIFT=20
    HAVE_YM3438_CORE
    "INLINE=static _inline"
    _CRT_SECURE_NO_WARNINGS
)

target_include_directories(${CoreName} PUBLIC
    Upstream/libretro/libretro-common/include
)

target_include_directories(${CoreName} PRIVATE
    Upstream/core/cd_hw/libchdr/src
    Upstream/core/cd_hw/libchdr/deps/libFLAC/include
    Upstream/core/cd_hw/libchdr/deps/lzma
    Upstream/core/cd_hw/libchdr/deps/zlib
    Upstream/core
    Upstream/core/z80
    Upstream/core/m68k
    Upstream/core/ntsc
    Upstream/core/sound
    Upstream/core/input_hw
    Upstream/core/cd_hw
    Upstream/core/cart_hw
    Upstream/core/cart_hw/svp
    Upstream/libretro
)
